Add cleanup after each test; limit hikari connection pool.